--- a/Getting_Started_with_Snowpark_in_Snowflake_Notebooks.ipynb
+++ b/Getting_Started_with_Snowpark_in_Snowflake_Notebooks.ipynb
@@ -113,7 +113,7 @@
     "                                            with_column_renamed('\"YEAR(DATE)\"',\"YEAR\").\\\n",
     "                                            with_column_renamed('\"MONTH(DATE)\"',\"MONTH\").\\\n",
     "                                            sort('YEAR','MONTH')\n",
-    "snow_df_spend_per_channel.show()"
+    "snow_df_spend_per_channel"
    ]
   },
   {
@@ -153,7 +153,7 @@
     "        col(\"'email'\").as_(\"EMAIL\")\n",
     "    )\n",
     "\n",
-    "snow_df_spend_per_month.show()"
+    "snow_df_spend_per_month"
    ]
   },
   {
@@ -183,7 +183,7 @@
     "                                            agg(sum('REVENUE')).\\\n",
     "                                            sort('YEAR','MONTH').\\\n",
     "                                            with_column_renamed('SUM(REVENUE)','REVENUE')\n",
-    "snow_df_revenue_per_month.show()"
+    "snow_df_revenue_per_month"
    ]
   },
   {
@@ -210,7 +210,7 @@
    "outputs": [],
    "source": [
     "snow_df_spend_and_revenue_per_month = snow_df_spend_per_month.join(snow_df_revenue_per_month, [\"YEAR\",\"MONTH\"])\n",
-    "snow_df_spend_and_revenue_per_month.show()"
+    "snow_df_spend_and_revenue_per_month"
    ]
   },
   {
