--- a/notebooks/0_start_here.ipynb
+++ b/notebooks/0_start_here.ipynb
@@ -56,7 +56,12 @@
    "outputs": [],
    "source": [
     "from snowflake.snowpark.context import get_active_session\n",
-    "session = get_active_session()"
+    "session = get_active_session()\n",
+    "# Add a query tag to the session.\n",
+    "session.query_tag = {\"origin\":\"sf_sit-is\", \n",
+    "                     \"name\":\"notebook_demo_pack\", \n",
+    "                     \"version\":{\"major\":1, \"minor\":0},\n",
+    "                     \"attributes\":{\"is_quickstart\":1, \"source\":\"notebook\", \"notebook\": \"getting_started_with_snowpark_in_snowflake_python_worksheets\"}}"
    ]
   },
   {
